--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/CristianoDaSilvaFerreira/restfull-node#readme",
   "dependencies": {
+    "consign": "^0.1.6",
     "express": "^4.18.1"
   }
 }
